--- a/ImageClassification_Email/project.json
+++ b/ImageClassification_Email/project.json
@@ -6,9 +6,10 @@
   "dependencies": {
     "UiPath.Excel.Activities": "[2.11.4]",
     "UiPath.Form.Activities": "[1.9.6]",
+    "UiPath.FormActivityLibrary": "[2.0.7]",
     "UiPath.Mail.Activities": "[1.12.3]",
     "UiPath.MLServices.Activities": "[1.2.1]",
-    "UiPath.Persistence.Activities": "[1.3.4]",
+    "UiPath.Persistence.Activities": "[1.5.9]",
     "UiPath.System.Activities": "[21.10.6]",
     "UiPath.UIAutomation.Activities": "[21.10.10]",
     "UiPath.WebAPI.Activities": "[1.9.2]"
